# Quantum-Neural-Network

./: CMakeLists.txt  README.md
Video/10/: 2.avi
Video/3/: 3.avi  4.avi  6.avi  7.avi  8.avi  9.avi
Video/4/: 3.avi  4.avi  6.avi  8.avi
Video/5/: 1.avi  2.avi  4.avi  6.avi  8.avi
Video/6/: 1.avi  2.avi  3.avi  4.avi  7.avi  8.avi  9.avi
Video/7/: 5.avi  7.avi
Video/9/: 7.avi
copy/100+0.5+10000+100%/: network_data.txt
src/BpNetwork/: NeuralNet.cpp  NeuralNet.hpp
src/Camera/: camera.cpp  camera.hpp
src/QuantumBGDifference/: QuantumBGDifference.cpp  QuantumBGDifference.hpp
src/QuantumCircuit/: QuantumCircuit.cpp  QuantumCircuit.hpp
src/QuantumConvolution/: QuantumConvolution.cpp  QuantumConvolution.hpp
src/QuantumImageEdgeExtract/: QuantumImageEdgeExtract.cpp  QuantumImageEdgeExtract.hpp
src/QuantumImageFeatureExtract/: QuantumImageFeatureExtract.cpp  QuantumImageFeatureExtract.hpp
src/QuantumImagePreparation/: QuantumImagePreparation.cpp  QuantumImagePreparation.hpp
src/QuantumNetwork/: QuantumNetwork.cpp  QuantumNetwork.hpp
src/QuantumViBe/: QuantumViBe.cpp  QuantumViBe.hpp
src/example/: ActionRecognition.cpp  ActionTrain.cpp  BP_Recognition.cpp  BP_RecognitionAccuracy.cpp  BP_test.cpp  Bp_Train.cpp  Convolution_test.cpp  FRQI_test.cpp  FeatureData_Save.cpp  NEQR_Save.cpp  NEQR_test.cpp  QBGDifference_test.cpp  QBP_test.cpp  QEdgeExtract_test.cpp  QFeatureExtract_test.cpp  QuantumCircuit_test.cpp  QuantumViBe_test.cpp  RecognitionAccuracy.cpp  VideoActionRecognition.cpp  VideoData_Save.cpp  camera_test.cpp
